// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe should be hidden when loading 1`] = `
.c0 {
  border: none;
  border-radius: 3px;
  visibility: hidden;
  overflow: hidden;
  width: 480px;
  height: 360px;
}

<iframe
  className="c0"
/>
`;

exports[`Iframe should be visible when loaded 1`] = `
.c0 {
  border: none;
  border-radius: 3px;
}

<iframe
  className="c0"
/>
`;
